# Game_def

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  define.h  game_def_cpp.h  main.c  main.cpp  test_cmake
GUI/cli/: interface_consol_game.h  interface_console.c  menu.c
games/sea_batle/: sea_batle.c  sea_batle.cpp
games/snake/: snake.c  snake.h  user_data.txt
games/snake/QT_part/: snake.cpp
games/snake/backend/: kernel.c  proc_files.c
games/snake/fronted/: define.h  fronted.c
games/tanks/: tank.c  tank.cpp
games/tetris/: kernel.c  matrix.h  matrix_game.c  proc_files.c  tetris.c  tetris.h  user_data.txt
games/tetris/QT_part/tetris/: Ogl_painter.cpp  Ogl_painter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  major.cpp  tetris_Qt.cpp
games/tetris/backend/: kernel.c  matrix_game.c  proc_files.c
games/tetris/fronted/: define.h  fronted.c
games/tetris/frontend/: fronted.c
lib/: lib_game.h  proc_files.c
